# DeepFilterNet4

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .veve  AGENTS.md  ATTRIBUTION.md  CHECKPOINT_RESUME.md  CONTRIBUTING.md  Cargo.toml  DATASETS.md  LINT_IGNORES.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  setup.sh  test_checkpoint_resume.py
.claude/skills/beads/: README.md
.claude/skills/beads/resources/: AGENTS.md  ASYNC_GATES.md  BOUNDARIES.md  CHEMISTRY_PATTERNS.md  CLI_REFERENCE.md  DEPENDENCIES.md  INTEGRATION_PATTERNS.md  ISSUE_CREATION.md  MOLECULES.md  PATTERNS.md  RESUMABILITY.md  STATIC_DATA.md  TROUBLESHOOTING.md  WORKFLOWS.md  WORKTREES.md
.copilot-tracking/archive/changes/: 20260105-deepfilternet-modernization-changes.md  20260105-mps-backend-support-changes.md
.copilot-tracking/archive/details/: 20260105-deepfilternet-modernization-details.md  20260105-mps-backend-support-details.md
.copilot-tracking/archive/plans/: 20260105-deepfilternet-modernization-plan.instructions.md  20260105-mps-backend-support-plan.instructions.md
.copilot-tracking/archive/research/: 20260105-pytorch-torchaudio-torchcodec-update-research.md  20260713-mps-backend-support-research.md
.copilot-tracking/changes/: 20260105-deepfilternet4-architecture-changes.md
.copilot-tracking/details/: 20260105-deepfilternet4-architecture-details.md
.copilot-tracking/plans/: 20260105-deepfilternet4-architecture-plan.instructions.md
.copilot-tracking/research/: 20260105-deepfilternet4-architecture-research.md
.github/: BADGES.md  CHECKS.md  CODEOWNERS  SETUP_GUIDE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/beads/: SKILL.md
.github/skills/beads/references/: ADVANCED.md  REFERENCE.md  TROUBLESHOOTING.md
.github/workflows/: build_capi.yml  build_demo.yml  build_wasm.yml  ci-status.yml  codeql.yml  combine-prs.yml  dependency-review.yml  pr-checks.yml  publish.yml  python_lint.yml  rust_lint.yml  stale.yml  test_df.yml  test_pypi_release.yml
DeepFilterNet/: LICENSE-MIT  benchmark_mlx_vs_pytorch.py  benchmark_optimizations.py  profile_attention.py  profile_full_training.py  profile_training.py  pyproject.toml  requirements.txt  requirements_dnsmos.txt  requirements_eval.txt  requirements_mlx.txt  test_attention_training.py  test_dfnetmf.py  test_gru_model.py  test_gru_training.py  test_mlx_stream.py  test_optimizations.py
DeepFilterNet/df/: __init__.py  checkpoint.py  config.py  deepfilternet.py  deepfilternet2.py  deepfilternet3.py  deepfilternet4.py  deepfilternetmf.py  discriminator.py  dnsmos_proxy.py  enhance.py  evaluation_utils.py  hardware.py  hybrid_encoder.py  io.py  logger.py  loss.py  lr.py  mamba.py  modules.py  multiframe.py  quantization.py  sepm.py  stoi.py  train.py  utils.py  visualization.py  whisper_adapter.py
DeepFilterNet/df/scripts/: benchmark_dfnet4.py  benchmark_mamba.py  distill.py  dnsmos.py  dnsmos_dns5.py  dnsmos_v2.py  export.py  export_onnx.py  filter_dnsmos.py  fix_n_samples_hdf5.py  hdf5_utils.py  list_attrs_in_hdf5.py  model_summary.py  plot_lrs.py  plot_summaries.py  prepare_data.py  profile_training.py  sample_from_hdf5.py  split_hdf5.py  test_df.py  test_dns_2020.py  test_noisy_dnsmos.py  test_voicebank_demand.py  trim_silence_hdf5.py
DeepFilterNet/df_mlx/: README.md  ROADMAP.md  __init__.py  benchmark_workers.py  build_audio_cache.py  checkpoint.py  config.py  convert.py  datastore.py  deepfilternet.py  deepfilternet2.py  deepfilternet3.py  deepfilternetmf.py  discriminator.py  dnsmos_proxy.py  dynamic_dataset.py  enhance.py  evaluation.py  generate_file_lists.py  hardware.py  loss.py  lr.py  mamba.py  model.py  modules.py  multiframe.py  ops.py  prepare_data.py  quantization.py  run_config.py  stoi.py  test_mlx.py  test_mlx_comprehensive.py  train.py  train_dynamic.py  train_gan.py  train_with_data.py  utils.py  vad_silero.py  validate_audio_cache.py  (+2 more)
DeepFilterNet/examples/: mlx_batch_enhance.py  mlx_inference.py  mlx_streaming.py  mlx_training.py
DeepFilterNet/tests/: conftest.py  test_checkpoint_resume_dynamic.py  test_datastore.py  test_deepfilternet4.py  test_dflib.py  test_dynamic_loss_numerics.py  test_hybrid_encoder.py  test_mamba.py  test_mps.py  test_multires_df.py  test_phase4_training.py  test_run_config.py  test_vad_eval_silero.py  test_whisper_adapter.py
datasets/apple/: config.ini
datasets/production/: dataset.cfg  manifest.yaml
datasets/prototype/: manifest.yaml
demo/: Cargo.toml
demo/src/: capture.rs  main.rs
docs/: ARCHITECTURE.md  BACKBONES.md  BENCHMARKS.md  CONVENTIONS.md  MIGRATION.md  no-stubs-audit.md
ladspa/: Cargo.toml
ladspa/src/: lib.rs
libDF/: Cargo.toml
libDF/src/: augmentations.rs  capi.rs  dataset.rs  tract.rs  wav_utils.rs
pyDF/: Cargo.toml  LICENSE-APACHE  pyproject.toml
pyDF-data/: Cargo.toml  pyproject.toml
pyDF-data/libdfdata/: torch_dataloader.py
pyDF-data/src/: lib.rs
pyDF/src/: lib.rs
scripts/: VIDEO_ENHANCEMENT_README.md  WAcc.py  WAcc_mean.py  WAcc_whisper.py  benchmark_backends.sh  benchmark_batch_sizes.py  build_wasm_package.sh  compare_models.py  copy_datadir.py  demo.py  download_process_dns4.sh  enhance_video_audio.py  external_usage.py  generate_playlists.py  live_spectrum.py  plot_benchmark_results.py  preprocess_wall_dataset.py  run_curves.sh  run_training_pipeline.sh  set_batch_size.py  test_checkpoint_enhancements.py  test_video_enhancement.py  train_dfnetmf_wall.py
scripts/datasets/: audb_download.py  build_hdf5.sh  build_mlx_datastore.sh  check_audb.py  cleanup_hdf5_keys.py  download_datasets.sh  fsd50k_filter.py  sha256sum.py
