[project]
name = "DeepFilterNet4"
version = "0.6.0"
description = "Noise supression using deep filtering; an advancement in real-time speech enhancement."
requires-python = ">=3.10,<3.15"
dynamic = ["dependencies"]
license = "MIT"
license-files = ["LICENSE*"]
authors = [
  { name = "Dr. Andrew Cox", email = "155285242+sealad886@users.noreply.github.com" },
  { name = "Hendrik Schröter" },
]
keywords = ["noise reduction", "neural network"]
classifiers = [
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/sealad886/DeepFilterNet4"

[project.optional-dependencies]
train = ["deepfilterdataloader", "icecream"]
eval = ["pystoi", "pesq", "scipy"]
soundfile = ["soundfile"]
dnsmos-local = ["onnxruntime"]
# ASR-based loss and evaluation (requires openai-whisper)
asr = ["openai-whisper"]
mlx = ["mlx", "mlx-whisper", "mlx-data"]
# Combined ASR with MLX optimization
asr-mlx = ["openai-whisper", "mlx", "mlx-whisper", "mlx-data"]
#dev = [ "black", "isort", "pytest" ]

[project.scripts]
deepFilter = "df.enhance:run"
deep-filter-py = "df.enhance:run"

[tool.poetry]
# Poetry 2.x: package metadata lives in `[project]`; keep only Poetry-specific config here.
packages = [{ include = "df" }, { include = "df_mlx" }]
include = [
  { path = "pretrained_models/DeepFilterNet/config.ini" },
  { path = "pretrained_models/DeepFilterNet/checkpoints/*" },
  { path = "pretrained_models/DeepFilterNet2/config.ini" },
  { path = "pretrained_models/DeepFilterNet2/checkpoints/*" },
]

[tool.poetry.dependencies]
deepfilterlib = { path = "../pyDF/" }
deepfilterdataloader = { path = "../pyDF-data/", optional = true }
python = ">=3.10,<3.15"
numpy = ">=1.22,<3.0"
loguru = ">=0.5"
appdirs = "^1.4"
requests = "^2.27"
packaging = ">=23,<25"
sympy = ">=1.6"
soundfile = { version = ">=0.10,<0.14", optional = true }
icecream = { version = ">=2,<3", optional = true }
pystoi = { version = ">=0.3,<0.5", optional = true }
pesq = { version = ">=0.0.3,<0.0.5", optional = true }
scipy = { version = "^1", optional = true }
onnxruntime = { version = "^1.15", optional = true }
torch = { version = ">=2.9.1" }
torchcodec = { version = ">=0.1", optional = true }
torchaudio = { version = ">=2.9.1" }
librosa = { version = "^0.11.0" }
pandas = { version = "*" }
tqdm = { version = "*" }
h5py = { version = "*" }
ptflops = { version = "*" }
tomli = { version = "^2.0", python = "<3.11" }
openai-whisper = { version = ">=20240930", optional = true }
mlx = { version = ">=0.0.6", optional = true, markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
mlx-whisper = { version = ">=0.4.0", optional = true, markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
mlx-data = { version = ">=0.2.0", optional = true, markers ="sys_platform == 'darwin' and platform_machine == 'arm64'" }
#black = { optinal = true }
#isort = { optional = true }
#pytest = { optional = true }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26"

[tool.poe.tasks]
install-torch-cuda121 = "pip install torch==2.9.1+cu121 torchaudio==2.9.1+cu121 --extra-index-url https://download.pytorch.org/whl/cu121"
install-torch-cuda124 = "pip install torch==2.9.1+cu124 torchaudio==2.9.1+cu124 --extra-index-url https://download.pytorch.org/whl/cu124"
install-torch-cpu = "pip install torch==2.9.1+cpu torchaudio==2.9.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu"
install-torch-mps = "pip install torch==2.9.1 torchaudio==2.9.1"
install-eval-utils = "python -m pip install -r requirements_eval.txt"
install-dnsmos-utils = "python -m pip install -r requirements_dnsmos.txt"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["df", "libdf", "libdfdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "mps: mark test as requiring MPS backend (skip on non-macOS)",
]
