[package]
name = "DeepFilterDataLoader"
version = "0.6.0"
authors = ["Dr. Andrew Cox <155285242+sealad886@users.noreply.github.com>", "Hendrik Schröter"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "libdfdata"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
timings = ["deep_filter/timings"]
hdf5-static = ["deep_filter/hdf5-static"]

[dependencies]
deep_filter = { features = ["dataset", "logging", "vorbis", "flac"], path = "../libDF" }
pyo3 = { version = "0.21", default-features = true }
numpy = "0.21"
log = { version = "0.4", features = ["std"] }
crossbeam-channel = "^0.5"
ndarray = { workspace = true }
