[package]
name = "DeepFilterLib"
version = "0.5.7-pre"
authors = ["Hendrik Schröter"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "libdf"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
deep_filter = { features = ["transforms", "logging"], path = "../libDF" }
pyo3 = { version = "0.22", features = ["extension-module", "gil-refs"]}
numpy = "0.22"
ndarray = "^0.15"
