[package]
name = "DeepFilterLib"
version = "0.6.0"
authors = ["Dr. Andrew Cox <155285242+sealad886@users.noreply.github.com>", "Hendrik Schröter"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "libdf"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
deep_filter = { features = ["transforms", "logging"], path = "../libDF" }
pyo3 = { version = "0.22", features = ["extension-module", "gil-refs"]}
numpy = "0.22"
ndarray = "^0.17"
